Pokedex first page with pokemon list and search field

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rubik:ital,wght@0,300;1,300&display=swap');
+
+// our project needs Solid + Brands
+
+body {
+  background-color: #1E1E1E !important;
+  font-family: 'Roboto' !important;
+}
