--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -8,6 +8,10 @@
     justify-content: space-around;
   }
 
+  .pokemon-detail {
+    cursor: pointer;
+  }
+
   .card {
     background-color: #B32658;
     width: 17em;
